	- ml_alertFunction - added a serialport read before callback initiation to read and discard erroneous data. Also serialdata is now converted 
	  to double before being saved into TrialRecord.User.serialData (this is now a fast operation)	 

templateSD/Fix - version 3.1 - thomas/georgin (31-10-2020)

	- corrected missing calib and fix image number event markers in fixTiming and calTiming files. cfg2 file in templateFix updates to check 
	  blockChange updates also (no significant change to other params).

mlLib   - version 3.2 - arun/jhilik (01-11-2020)
	
	- ml_alertFunction - added comment about serial data saving at 'trial end'
	- ml_makeCondiditonsFix - changed color of hold button from green to blue

templateSD/Fix - version 3.2 - thomas (31-10-2020)

	- added trialFlag in TrialRecord.User for cal, fix and sd (NaN in cal trials).
	- added condition of free choice trial in sd timing so monkey gets reward if Info.expectedResponse is 0.

mlLib   - version 4.0 - thomas (01-12-2020)
	
	- ml_initExp - updated PC name to 'VISIONLABML', corrected error message for header not sent
	- ml_readSerialData - update time function to 'datestr(now)' from clock (as millisecond precision wasn't there)

templateSD/Fix - version 4.0 - thomas/georgin (01-12-2020)

	- calibration editable variables separated from task (sd or fix) editable variables
	- corrected missing editable start event marker in calTiming.m
	- update time function for trialStart and trialStop to 'datestr(now)' from clock (as millisecond precision wasn't there)
	- added latest iscan dqw cfg files

templateSD/Fix - version 4.1 - thomas/georgin (31-12-2020)

	- editable variables renamed
	- fixTiming.m updated to handle delayPeriod of 0 ms
	- fixed fixation hold period (after fix init) implemented (set at 200ms) across timing files
	- updated variable names in info field and in timing files (holdInitPeriod and fixInitPeriod)
	


	